# agent-auth

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  server.json
.claude/: settings.local.json
.github/workflows/: ci.yml  publish-mcp.yml
docs/: agentauth.postman_collection.json  deployment.md
docs/guides/: admin.md  quickstart.md
docs/reviews/: 0903-1.md
docs/tasks/: README.md  task-1.1-project-scaffold.json  task-1.2-database-setup.json  task-1.3-agent-model-crud.json  task-1.3-implementation-summary.md  task-1.4-api-examples.md  task-1.4-completion-summary.md  task-1.4-credential-issuance.json  task-1.5-api-key-auth-middleware.json  task-1.5-completion-summary.md  task-10.1-mcp-registry-publish.json  task-2.1-api-examples.md  task-2.1-completion-summary.md  task-2.1-jwk-management.json  task-2.2-api-examples.md  task-2.2-completion-summary.md  task-2.2-token-minting.json  task-2.3-api-examples.md  task-2.3-client-credentials-grant.json  task-2.3-completion-summary.md  task-2.4-completion-summary.md  task-2.4-token-introspection.json  task-2.5-token-revocation.json  task-2.6-refresh-token-flow.json  task-3.1-scope-registry.json  task-3.2-policy-model-crud.json  task-3.3-policy-evaluation-engine.json  task-3.4-auth-middleware-integration.json  task-3.5-delegation-model-chain.json  task-3.6-agent-delegation-grant.json  task-4.1-python-sdk.json  task-4.2-verification-middleware.json  task-4.3-audit-log-query-api.json  task-4.4-rate-limiting.json  task-4.5-webhook-delivery.json  task-4.6-wellknown-metadata.json  task-5.1-bootstrap-rate-limiting.json  task-5.2-delegation-access-scoping.json  task-5.3-policy-access-scoping.json  task-5.4-policy-update-field-allowlist.json  (+24 more)
mcp-server/: AgentAuth-MCP.postman_collection.json  MCP_TEST_PROMPTS.md  README.md  pyproject.toml
mcp-server/results_from_mcp_test_prompts/: 20260313032045.md  202603131355.md  202603131830.md  202603141045.md
mcp-server/src/agentauth_mcp/: __init__.py  client.py  server.py
mcp-server/tests/: test_client.py  test_server.py
migrations/: README  env.py
migrations/versions/: 03a6519ac6a1_add_audit_events_table.py  823191907d58_add_agent_and_credential_models.py  a1b2c3d4e5f6_add_scopes_table.py  b2c3d4e5f6a7_add_policies_table.py  bede3c340be9_add_signing_key_table.py  c3d4e5f6a7b8_add_delegations_table.py  d4e5f6a7b8c9_add_audit_gin_index.py  e5f6a7b8c9d0_add_webhook_tables.py  f6a7b8c9d0e1_enforce_unique_agent_names.py  g7b8c9d0e1f2_add_token_lifetime_seconds_to_credentials.py
monitoring/: loki-config.yml  promtail-config.yml
nginx/: agentauth.conf  blue.conf  green.conf
scripts/: agentauth-sudoers  backup.sh  deploy.sh  restore.sh
sdk/: pyproject.toml
sdk/src/agentauth_sdk/: __init__.py  client.py  middleware.py
src/agent_auth/: __init__.py
src/agentauth/: config.py  dependencies.py  main.py
tests/: conftest.py  test_agent_api.py  test_credential_api.py  test_credential_service.py
tests/e2e/: __init__.py  test_full_auth_flow.py
tests/integration/: test_admin_api.py  test_agent_api.py  test_agent_visibility.py  test_auth_middleware_integration.py  test_client_credentials_grant.py  test_credential_api.py  test_credential_ownership.py  test_delegation_chain.py  test_delegation_permission_check.py  test_jwks_endpoint.py  test_refresh_token_flow.py  test_token_cascade_revocation.py  test_token_flow.py  test_token_introspection.py  test_token_introspection_with_redis.py  test_unique_agent_names.py
tests/unit/: conftest.py  test_config.py  (+29 more)
(+53 files in other folders)
