[project]
name = "agentauth-mcp-server"
version = "0.1.0"
description = "MCP server exposing AgentAuth identity and authentication tools for AI agents"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentauth_mcp"]

[project.scripts]
agentauth-mcp = "agentauth_mcp.server:main"
