[project]
name = "agentauth-mcp-server"
version = "0.1.1"
description = "MCP server exposing AgentAuth identity and authentication tools for AI agents"
readme = "README.md"
license = { text = "BUSL-1.1" }
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://agentauth.radi.pro"
Repository = "https://github.com/radi-totev/agent-auth"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentauth_mcp"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
agentauth-mcp = "agentauth_mcp.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
