[project]
name = "agentauth-sdk"
version = "0.1.0"
description = "Python SDK for the AgentAuth identity and authentication service"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.115"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentauth_sdk"]
